corrección de ortografía, relacionado con acentos, nombres propios

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1 class="display-1 fw-bold my-5 text-primary">
                     Resumen
                 </h1>
-               <p>De profesión Medico Veterinario, actualmente trabajo en una Ong dedicada a la rehabilitación de personas en situacion de discapacidad, me defino como una persona de gran curiosidad y capacidad de aprender cosas nuevas, por lo que e indagado en varias areas de las ciencias y la tecnologia.</p>
+               <p>De profesión Médico Veterinario, actualmente trabajo en una ONG dedicada a la rehabilitación de personas en situación de discapacidad, me defino como una persona de gran curiosidad y capacidad de aprender cosas nuevas, por lo que he indagado en varias áreas de las ciencias y la tecnología.</p>
             </div>
         </div>
     </header>
@@ -48,31 +48,31 @@
       <div class="datos generales">
          <h2> Datos personales</h2>
          <ul>
-            <p><li>Nombre: Ana  Maria Mayorga Ojeda</li></p>
-             <p><li>Lugar de nacimiento: Purranque, x region, chile</li></p>
+            <p><li>Nombre: Ana  María Mayorga Ojeda</li></p>
+             <p><li>Lugar de nacimiento: Purranque, Región de Los Lagos, Chile</li></p>
              <p><li>Fecha de nacimiento: 24/11/1976 </li></p>
       
-         <h2>Datos academicos</h2>
+         <h2>Datos académicos</h2>
          <OL>
             <p>
-                <li> Colegio preciosa sangre</li>
+                <li> Colegio Preciosa Sangre</li>
                 <i class="bi bi-arrow-right"></i> 
                 <a href="http://www.colegiopreciosasangre.cl/"target="_blanck">pincha aquí</a>
             </p>
              <p>
-                <li> Medicina Veterinaria, Universidad Catolica de Temuco</li> 
+                <li> Medicina Veterinaria, Universidad Católica de Temuco</li> 
                 <i class="bi bi-arrow-right"></i>
                 <a href="https://www.uct.cl/"target="_blanck">pincha aquí</a> 
             </p>
 
              <p>
-                <li> Curso de Reanimación básica y avanzada en animales de compañia, Universidad Catolica de Temuco</li>
+                <li> Curso de Reanimación básica y avanzada en animales de compañía, Universidad Católica de Temuco</li>
             </p>
              <p>
-                <li> Curso de Actualización en Medicina de animales de compañia. clinica Veterinaria Anibal Pinto</li>
+                <li> Curso de Actualización en Medicina de animales de compañía. Clínica Veterinaria Anibal Pinto</li>
             </p>
              <p>
-                <li> Curso de Equinoterapia, Fundacion Cintec</li>
+                <li> Curso de Equinoterapia, Fundación Cintec</li>
                 <i class="bi bi-arrow-right"></i> 
                 <a href="http://www.facebook.com/CINTEC/?locale=es_LA"target="_blanck">pincha aquí</a>
             </p>
@@ -90,8 +90,8 @@
           </OL> 
          <h2>Datos Laborales</h2>
          <OL>
-             <p><li> Medico veterinario independiente</li></p>
-             <p><li> Administrador Corporación de  Rehabilitación Corelam</li> <a href="#"target="_blanck">pincha aquí</a> </p>
+             <p><li> Médico veterinario independiente</li></p>
+             <p><li> Administrador Corporación de Rehabilitación Corelam</li> <a href="#"target="_blanck">pincha aquí</a> </p>
              <p><li> Director Técnico Plaguibart Empresa de control de plagas</li></p>
             
           </OL> 
