--- a/portafolio.html
+++ b/portafolio.html
@@ -8,10 +8,10 @@
     <title>PORTAFOLIO</title>
 </head>
 <body>
-    <div class="header" style="background-color:blue;" >
-        <h1 class="titulo"> Portafolio </h1>
-   
-    </div>
+  <nav class="navbar navbar-expand-lg bg-primary">
+    <a class="navbar-brand" href="#">
+      <a class="navbar-brand text-light p-8" href="index.html"> Portafolio </a>
+    </nav>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card h-100">
