En el portafolio, cambié la palabra portafolio por página principal

--- a/portafolio.html
+++ b/portafolio.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-primary">
     <a class="navbar-brand" href="#">
-      <a class="navbar-brand text-light p-8" href="index.html"> Portafolio </a>
+      <a class="navbar-brand text-light p-8" href="index.html"> Página principal </a>
     </nav>
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
